# fight-base

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  COMMIT_MESSAGE.md  DATASET_INTEGRATION_SUMMARY.md  DOCUMENTACAO_INDEX.md  Dockerfile  Dockerfile.frontend  Makefile  QUICK_START_IMPORT.md  README.md  alembic.ini  docker-compose.yaml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  ufc-dataset-scrapper.ipynb
app/: main.py
app/api/: __init__.py  health_check.py
app/core/: logger.py  settings.py
app/database/: unit_of_work.py
app/exceptions/: exceptions.py
app/middlewares/: response_time.py  trace_id.py
app/schemas/: auth.py
docs/: ALGORITMO_TECNICO.md  EXEMPLOS_PRATICOS.md  README.md  alembic.md  casos-de-uso.md  estrutura-documentacao.md  fighter_record_system.md  frontend-guide.md  importacao-csv.md  importacao-ufc-dataset.md  melhorias-recomendadas.md  quickstart.md  refactoring-history.md  roadmap.md
frontend/: index.html  test-api.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js  events.js  fighters.js  rankings.js  simulation.js  stats.js  utils.js
migrations/: env.py
scripts/: backup_database.py  check_ml_stats.py  create_admin.py  example_ufc_queries.py  import_fighters_from_csv.py  import_ufc_dataset.py  run_import.sh  test_custom_fighter_ml.py  test_import_consolidated.py  test_ml_simulation.py  test_weight_class_update.py  validate_import.py
tests/: conftest.py  test_ml_integration.py  test_ml_structure.py  test_ml_validation.py
tests/fixtures/: base.py  database.py
(+55 files in other folders)
